fix warnings deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mohamedmounir2425.github.io/productsCategories",
+  "homepage": "http://mohamedmounir2425.github.io/productsCategories",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
