--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "homepage": "http://mohamedmounir2425.github.io/productsCategories",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "homepage": ".",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
