--- a/.github/workflows/main_ui-test-azure.yml
+++ b/.github/workflows/main_ui-test-azure.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm ci
+          npm install
           npm build --if-present
 
       - name: Zip artifact for deployment
