--- a/.github/workflows/main_ui-test-azure.yml
+++ b/.github/workflows/main_ui-test-azure.yml
@@ -24,7 +24,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm build --if-present
+          npm run build 
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
